--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -8,7 +8,7 @@
     stages {
       stage('fetch_latest_code') {
         steps {
-          url: 'https://github.com/Omidznlp/AWS-Self-Maneged-Kubernetes.git'
+          git url: 'https://github.com/Omidznlp/AWS-Self-Maneged-Kubernetes.git'
         }
       }
 
