--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -1,4 +1,10 @@
   pipeline {
+    agent {
+      node {
+        label "master"
+      } 
+    }
+
     stages {
       stage('fetch_latest_code') {
         steps {
