add destroy to Jenkins

--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -32,5 +32,18 @@
           sh 'terraform -chdir=terraform apply -input=false --auto-approve'
         }
       }
+      stage('Removal') {
+        steps {
+          script {
+            def userInput = input(id: 'confirm', message: 'Destroy Terraform?', parameters: [ [$class: 'BooleanParameterDefinition', defaultValue: false, description: 'Destroy terraform', name: 'confirm'] ])
+          }
+        }
+      }
+
+      stage('TF Destroy') {
+        steps {
+          sh 'terraform -chdir=terraform destroy -input=false --auto-approve'
+        }
+      }
     } 
   }
